[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Assets/Icons/crosshairs.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/RedBar.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/BarBackground.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/hurt.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="BoxShape" id=2]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "interact",
"speed": 1.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": false,
"name": "inspect",
"speed": 1.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": false,
"name": "pickup",
"speed": 1.0
} ]

[node name="Player" type="KinematicBody"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.52225, 0 )

[node name="SpotLight" type="SpotLight" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.172336, -1.54999 )
light_color = Color( 0.85098, 0.85098, 0.85098, 1 )
light_energy = 0.5
spot_range = 25.0
spot_angle = 30.0

[node name="Camera" type="Camera" parent="Head"]

[node name="RayCast" type="RayCast" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 11, 0, 0, -1.11886 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
collision_mask = 2

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.93514, 0, 0, 0, -1.11989e-07, -2.56201, 0, 1.01114, -4.41984e-08, -0.0860502, 0.0522175, 0.0772798 )
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasLayer/Control/Popup"]
frames = SubResource( 6 )
animation = "pickup"

[node name="StaminaBar" type="TextureProgress" parent="CanvasLayer/Control"]
margin_left = -911.346
margin_top = -541.47
margin_right = 112.654
margin_bottom = 482.53
rect_scale = Vector2( 0.25, 0.25 )
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaTimer" type="Timer" parent="."]

[node name="HealthRegen" type="Timer" parent="."]
wait_time = 90.0
autostart = true

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="StaminaTimer" to="." method="_on_StaminaTimer_timeout"]
[connection signal="timeout" from="HealthRegen" to="." method="_on_HealthRegen_timeout"]
